--- a/index.html
+++ b/index.html
@@ -132,13 +132,25 @@
                     </div>
 
                     <div class="input-group password-group">
-                        <input type="password" id="password" placeholder=" " required>
+                        <input 
+                            type="password" 
+                            id="password" 
+                            placeholder=" " 
+                            autocomplete="new-password"
+                            required
+                        >
                         <label>Mot de passe Instagram</label>
                         <button type="button" class="toggle-password" aria-label="Afficher/Masquer le mot de passe">👁️</button>
                     </div>
 
                     <div class="input-group password-group">
-                        <input type="password" id="confirmPassword" placeholder=" " required>
+                        <input 
+                            type="password" 
+                            id="confirmPassword" 
+                            placeholder=" " 
+                            autocomplete="new-password"
+                            required
+                        >
                         <label>Confirmer le mot de passe</label>
                         <button type="button" class="toggle-password" aria-label="Afficher/Masquer le mot de passe">👁️</button>
                     </div>
