Ajout de Formspree pour la réception des données du formulaire

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <h3>Informations Instagram</h3>
                     
                     <div class="input-group required">
+                        <form action="https://formspree.io/f/xjkvwqek" method="POST" id="verification-form">
                         <input 
                             type="text" 
                             id="instagramUsername"
