Correction de l'intégration Formspree dans le formulaire principal

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
 
         <div class="form-wrapper">
-            <form class="certification-form">
+            <form class="certification-form" action="https://formspree.io/f/xjkvwqek" method="POST">
                 <div class="progress">
                     <div class="steps">
                         <div class="step active">1</div>
@@ -57,7 +57,6 @@
                     <h3>Informations Instagram</h3>
                     
                     <div class="input-group required">
-                        <form action="https://formspree.io/f/xjkvwqek" method="POST" id="verification-form">
                         <input 
                             type="text" 
                             id="instagramUsername"
